--- a/client/scss/bootstrap.scss
+++ b/client/scss/bootstrap.scss
@@ -1,9 +1,17 @@
-/*
 $primary: black;
 $dark: #43666e;
 $light: #faf0dc;
 $info: #2d235f;
 
-$dropdown-link-active-bg: none;
-*/
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+.divider-border {
+  display: inline-block;
+  height: 3px;
+  position: relative;
+  width: 90px;
+  background: $dark;
+  margin-bottom: 10px;
+}
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
