--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,3 +1,27 @@
-@import '_colors';
-@import '_layout';
-@import '_forms';
+@import "_colors";
+@import "_layout";
+@import "_forms";
+
+html,
+body,
+#app {
+  margin: 0;
+  height: 100%;
+}
+
+#main {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 90%;
+  width: 100%;
+  padding-top: 100px;
+}
+
+#footer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 10%;
+  width: 100%;
+}
