--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/dist/bundle.js"></script>
+    <noscript>
+      This website requires JavaScript in order to function correctly. Here are
+      the instructions how to
+      <a href="https://www.enable-javascript.com/">enable</a>
+      JavaScript in your web browser.
+    </noscript>
   </body>
-  <script src="/dist/bundle.js"></script>
 </html>
