--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <link rel="shortcut icon" href="/static/images/favicon.png" />
-    <title>Fitness Providers</title>
+    <title><%= title %></title>
   </head>
   <body>
     <div id="app"></div>
