--- a/client/scss/bootstrap.scss
+++ b/client/scss/bootstrap.scss
@@ -1,7 +1,12 @@
-$primary: black;
-$dark: #43666e;
-$light: #faf0dc;
-$info: #2d235f;
+/*$primary: #e7e247;
+$dark: #4d5061;
+$light: #e9edde;
+$info: #5c80bc;*/
+
+$primary: #219ebc;
+$dark: #023047;
+$light: #8ecae6;
+$info: #ffb703;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
