--- a/client/tailwind-src/tailwind.css
+++ b/client/tailwind-src/tailwind.css
@@ -2,7 +2,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     background-color: #1a202c;
