--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <link rel="shortcut icon" href="/static/images/favicon.png" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
-    <noscript>
-      This website requires JavaScript in order to function correctly. Here are
-      the instructions how to
-      <a href="https://www.enable-javascript.com/">enable</a>
-      JavaScript in your web browser.
-    </noscript>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="" />
+        <link rel="shortcut icon" href="/static/images/favicon.png" />
+        <title><%= title %></title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script src="/dist/bundle.js"></script>
+        <noscript>
+            This website requires JavaScript in order to function correctly.
+            Here are the instructions how to
+            <a href="https://www.enable-javascript.com/">enable</a>
+            JavaScript in your web browser.
+        </noscript>
+    </body>
 </html>
