--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -5,23 +5,33 @@
 html,
 body,
 #app {
-  margin: 0;
-  height: 100%;
+    margin: 0;
+    height: 100%;
 }
 
 #main {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  min-height: 90%;
-  width: 100%;
-  padding-top: 100px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    min-height: 90%;
+    width: 100%;
+    padding-top: 100px;
 }
 
 #footer {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  height: 10%;
-  width: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 10%;
+    width: 100%;
+}
+
+.opacity-transition {
+    transition: opacity 0.3s;
+    -webkit-transition: opacity 0.3s;
+    opacity: 0;
+}
+
+.opacity-transition:hover {
+    opacity: 0.5;
 }
