--- a/src/Email/User/PasswordChange.ejs
+++ b/src/Email/User/PasswordChange.ejs
@@ -1,4 +1,4 @@
-<h1>Password Changed</h1>
+<h1 style="margin-top: 0">Password Changed</h1>
 <p>Your password has been changed!</p>
 <p>
     If you did not authorize this, request a new password immediately! Make sure
