--- a/client/scss/bootstrap.scss
+++ b/client/scss/bootstrap.scss
@@ -6,12 +6,16 @@ $info: #ffb703;
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 .divider-border {
-  display: inline-block;
-  height: 3px;
-  position: relative;
-  width: 90px;
-  background: $dark;
-  margin-bottom: 10px;
+    display: inline-block;
+    height: 3px;
+    position: relative;
+    width: 90px;
+    background: $dark;
+    margin-bottom: 10px;
+}
+
+.navbar-toggler-icon {
+    background-image: url("/images/Hamburger.svg") !important;
 }
 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
